fixed alignment of tooltip img preview

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1036,7 +1036,7 @@ p {
 
   .tooltip-selector > .tooltipimg {
   	top: -170px;
-  	left: -7px;
+  	left: -3px;
   	height: 174px;
   	width: 174px;
   }
@@ -1334,7 +1334,7 @@ p {
 
   .tooltip-selector > .tooltipimg {
   	top: -259px;
-  	left: -11px;
+  	left: -7px;
   	height: 255px;
   	width: 255px;
   }
@@ -1457,7 +1457,7 @@ p {
 
   .tooltip-selector > .tooltipimg {
   	top: -292px;
-  	left: -9px;
+  	left: -5px;
   	height: 290px;
   	width: 290px;
   }
